--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ JUNIOR Your browser makes a request for a website. That request is sent to Pi-Ho
 			    </aside>
 				  <h4>How does <span style=color:#00ff00;text-transform:lowercase>I</span>t work?</h4>
 				  <img src="images/pi-hole-diagram-1.png"></img>
-				</JUNIOR section>
+				</section>
 
 	      <section data-background="images/black-logo.png">
 				  <!--PART 2 SLIDE 2.5-->
